--- a/user/vivek_78/about.html
+++ b/user/vivek_78/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="global.css" type="text/css">
+    <link rel="stylesheet" href="https://rubyproducti9n.github.io/mech/user/c0m_adm1n/global.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link rel="stylesheet" href="../c0m_adm1n/global.css">
     <title>Artificial Intelligence </title>
     <link rel="icon"href="https://i.pinimg.com/originals/dc/30/1d/dc301dd6fac108a2a60f103e01539f04.jpg"sizes="16x16 32x32"type="image/png">
     <style>
@@ -100,12 +101,21 @@
         .fa-download{
             margin: 0 5px;
         }
+        .active{
+            color: #fff;
+            background: #4285f4;
+        }
     </style>
 </head>
 <body>
     <div class="home">
         <nav class="navbar">
             <ul>
+                <li>
+                    <a class="nav-link" href="index.html#query?machine=true,show=false">
+                        Home
+                    </a>
+                </li>
                 <li>
                     <a class="nav-link" href="machine learning.html#query?machine=true,show=false">
                         Machine Learning
@@ -117,17 +127,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="IoT.html#query?iot=true,show=true">
-                        IoT
-                    </a>
-                </li>
-                <li>
-                    <a class="nav-link" href="deep learning.html#query?deep=true,show=false">
-                        Deep Learning
-                    </a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#query?info=false,show=false#error504">
+                    <a class="nav-link active" href="about.html#query?info=true,show=false">
                         About
                     </a>
                 </li>
@@ -136,7 +136,7 @@
         <br><br><br><br><br><br><br><br><br><br><br>
         <center>
         <!-- <h1>Artificial Intelligence</h1> -->
-        <img oncontextmenu="return false;" draggable="false" src="https://media.istockphoto.com/photos/digital-data-and-network-connection-of-human-brain-on-white-in-the-picture-id1034439558?k=20&m=1034439558&s=612x612&w=0&h=a86MNtCzAEUfvekTcJ0nAQnMDLH-1s_5PbyyvPUnVlU=" width="40%">
+        <img draggable="false" src="https://media.istockphoto.com/photos/digital-data-and-network-connection-of-human-brain-on-white-in-the-picture-id1034439558?k=20&m=1034439558&s=612x612&w=0&h=a86MNtCzAEUfvekTcJ0nAQnMDLH-1s_5PbyyvPUnVlU=" width="40%">
     </center>
     <br><br><br><br><br>
 
