--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
     <div class="note">
         <marquee> Disclaimer: This web page is meant for educational purpose only. All copyrights to their official owner. Page was created by Om Lokhande. </marquee>
     </div>
-    <header class="header"> <a href="#" class="header__logo">UNOFFICIAL MECH</a> <i class='bx bx-menu header__toggle' id="header-toggle"></i>
+    <!-- <header class="header"> <a href="#" class="header__logo">UNOFFICIAL MECH</a> <i class='bx bx-menu header__toggle' id="header-toggle"></i>
         <nav class="nav" id="nav-menu">
             <div class="nav__content bd-grid"> <a href="" class="nav__perfil">
-                    <!-- <div class="nav__img"> <img src="img/profile-avatar.png" alt=""> </div> -->
-                    <div> <span id="user_name" class="nav__name">UNOFFICIAL MECH</span> <!-- <span class="nav__name">Mitchell</span> -->
+                    <div class="nav__img"> <img src="img/profile-avatar.png" alt=""> </div>
+                    <div> <span id="user_name" class="nav__name">UNOFFICIAL MECH</span>  <span class="nav__name">Mitchell</span>
                     </div>
                 </a>
                 <div class="nav__menu">
@@ -237,7 +237,7 @@
                 </div>
             </div>
         </nav>
-    </header>
+    </header> -->
     <div id="msg" class="status">
       <center>
       <div id="status"></div>
@@ -380,7 +380,7 @@
         function error(){alert("Link expired")}
     </script>
     <script src="js/id/6koSC.js"></script>
-    <script src="js/global.restrict.js"></script>
+    <script src="https://rubyproducti9n.github.io/concertera/js/global.restrict.js"></script>
     <link rel="stylesheet" href="lib/navbar/assets/css/styles.css">
     <link rel="stylesheet" href="lib/toast/assets/notify.min.css" />
     <script src="lib/toast/assets/notify.min.js"></script>
