--- a/album.html
+++ b/album.html
@@ -164,6 +164,10 @@
     padding: 0 4px;
   }
 
+  #control{
+    border: 0px #000 solid;
+  }
+
   /* Create four equal columns that sits next to each other */
   .column {
     -ms-flex: 25%; /* IE10 */
@@ -183,10 +187,11 @@
     z-index: 100;
   }
   .column img {
-    margin-top: 10px;
+    margin-top: 18px;
     vertical-align: middle;
-    border-radius: 4px;
+    border-radius: 18px;
     width: 100%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.39);
     padding: 0px 0;
   }
 
@@ -215,11 +220,11 @@
   <body>
 
 
-    <header class="header"> <a href="#" class="header__logo">UNOFFICIAL MECH</a> <i class='bx bx-menu header__toggle' id="header-toggle"></i>
+    <!-- <header class="header"> <a href="#" class="header__logo">UNOFFICIAL MECH</a> <i class='bx bx-menu header__toggle' id="header-toggle"></i>
       <nav class="nav" id="nav-menu">
           <div class="nav__content bd-grid"> <a href="" class="nav__perfil">
-                  <!-- <div class="nav__img"> <img src="img/profile-avatar.png" alt=""> </div> -->
-                  <div> <span id="user_name" class="nav__name">UNOFFICIAL MECH</span> <!-- <span class="nav__name">Mitchell</span> -->
+                   <div class="nav__img"> <img src="img/profile-avatar.png" alt=""> </div>
+                  <div> <span id="user_name" class="nav__name">UNOFFICIAL MECH</span>  <span class="nav__name">Mitchell</span>
                   </div>
               </a>
               <div class="nav__menu">
@@ -232,7 +237,7 @@
               </div>
           </div>
       </nav>
-  </header>
+  </header> -->
 <!-- <div class="nav-bar">
   <a class="link" onclick="home()">
   <img class="brand-lg" src="img/avatar.jpg">
@@ -258,7 +263,6 @@
 </div>
 <div id="home" class="main-container">
 
-<br><br><br><br>
 <!-- Header -->
 
 <!-- <div class="header2">
@@ -292,7 +296,7 @@
      <p class="adjust text"></p>
     </div> -->
 <!-- <div class="update primary-font">Last updated 17-Sep-22</div> -->
-<a class="upload-btn" href="javascript:void(0)"><i class="fa fa-plus upload-ic"></i> Add to album</a>
+<!-- <a class="upload-btn" href="javascript:void(0)"><i class="fa fa-plus upload-ic"></i> Add to album</a> -->
   <!-- <hr width="80%">
   <h1>• Videos</h1>
   <div class="row">
@@ -414,7 +418,7 @@ function error(){alert("Something went wrong, please contact our team or try aga
 <script src="lib/toast/assets/notify.min.js"></script>
 <script src="lib/navbar/assets/js/main.js"></script>
 <script src="js/album.js"></script>
-<script src="js/global.restrict.js"></script>
+<script src="https://rubyproducti9n.github.io/concertera/js/global.restrict.js"></script>
 <!-- <script src="https://rubyproducti9n.github.io/concertera/mdb/js/global.min.js"></script> -->
 </body>
 </html>
