--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       z-index: 10;
     }
     .blur{
-      filter: blur(4px);
+      filter: blur(8px);
     }
     .btn-upload{
       position: fixed;
@@ -139,6 +139,50 @@
       font-family: 'Comfortaa', cursive;
       font-size: 15px;
     }
+
+
+
+    .ind-cards-container{
+        margin: 0;
+        overflow: hidden;
+    }
+    .ind-card{
+        margin: 20px 10px;
+        padding-bottom: 40px;
+        border: 2px rgba(0, 0, 0, 0.26) solid;
+        border-radius: 28px;
+        overflow: hidden;
+    }
+    .ind-img{
+        width: 100%;
+        border-radius: 0px;
+    }
+    .ind-details{
+        color: rgb(36, 36, 36);
+        background-color: rgba(255, 217, 0, 0);
+        width: 80%;
+        margin: 0px;
+        padding: 0px 10px;
+        border-bottom: 0px #000 solid;
+        border-radius: 0px;
+    }
+    .ind-title{
+        margin: 0;
+        padding: 5px 0;
+        font-size: 18px;
+        font-weight: 500;
+        border: 0px #000 solid;
+    }
+    .ind-other-detail{
+        margin: 0;
+        padding: 0px 0;
+        font-size: 12px;
+        font-weight: 400;
+        border: 0px #000 solid;
+    }
+
+
+
     @media screen and (max-width: 768px) {
     .nav-bar{
       position: fixed;
@@ -245,11 +289,6 @@
     </div>
     <div id="home">
     <div class="header2">
-        <center>
-            <div class="credit">
-        <img class="header-img" src="img/mech.jpg" draggable="false" oncontextmenu="return false;">
-    </div>
-    </center>
         <h3>UNOFFICIAL MECH</h3>
     </div>
     <!-- <nav class="custom-nav">
@@ -262,62 +301,53 @@
             <p class="maintain-text">
             <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Coming Soon</h2> <br>
     </div>
-    <div class="main-container"> <br><br><br><br>
+    <div class="main-container">
         <h2 class="section-title">Popular videos</h2>
-        <div class="custom-mech-card">
-            <div class="mech-card " onclick="link1()"> <img class="mech-card-img" draggable="false" src="img/img1.jpg">
-                <h3 class="dr-title placeholder">SANJIVANI COE Status Video | New </h3>
-                <h6 class="dr-details placeholder">
-                    <p class="">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 08 Jul 2022</p>
-                </h6>
+
+        <div class="ind-cards-container">
+
+            <div class="ind-card" onclick="link1()">
+                <img class="ind-img" src="img/img1.jpg">
+                <div class="ind-details">
+                    <p class="ind-title">Sanjivani COE Status Video</p>
+                    <p class="ind-other-detail">Unofficial Mech <i class="fa fa-check-circle"></i> • 08 Jul 2022</p>
+                </div>
             </div>
-            <div class="mech-card" onclick="link2()"> <img class="mech-card-img" draggable="false" src="img/img2.jpg">
-                <h3 class="dr-title">SANJIVALI COE | STATUS VIDEO #3</h3>
-                <h6 class="dr-details">
-                    <p class="">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 26 Jun 2022</p>
-                </h6>
+
+            <div class="ind-card" onclick="link2()">
+                <img class="ind-img" src="img/img2.jpg">
+                <div class="ind-details">
+                    <p class="ind-title">SANJIVANI COE | STATUS VIDEO #3</p>
+                    <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 26 Jun 2022</p>
+                </div>
             </div>
-            <div class="mech-card" onclick="link3()"> <img class="mech-card-img" draggable="false" src="img/img3.jpg">
-                <h3 class="dr-title"> Oreo Biscuit Prank | PART 2 </h3>
-                <h6 class="dr-details">
-                    <p class="">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 05 Jul 2022</p>
-                </h6>
+
+            <div class="ind-card" onclick="link3()">
+                <img class="ind-img" src="img/img3.jpg">
+                <div class="ind-details">
+                    <p class="ind-title">Oreo Biscuit Prank | PART 2</p>
+                    <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 05 Jul 2022</p>
+                </div>
             </div>
-            <div class="mech-card" onclick="link4()"> <img class="mech-card-img" draggable="false" src="img/img4.jpg">
-                <h3 class="dr-title"> Oreo Biscuit Prank | PART 1 </h3>
-                <h6 class="dr-details">
-                    <p class="">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 29 Jun 2022</p>
-                </h6>
+
+            <div class="ind-card" onclick="link4()">
+                <img class="ind-img" src="img/img4.jpg">
+                <div class="ind-details">
+                    <p class="ind-title">Oreo Biscuit Prank | PART 1</p>
+                    <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 29 Jun 2022</p>
+                </div>
             </div>
-        </div> <br>
-        <hr width="95%"><br>
-        <div class="container"> <img class="promo-img" src="img/avatar.jpg" align="left">
-            <p class="promo-txt">
-            <h2>UNOFFICIAL MECH <i class="fa fa-check-circle"></i> </h2>
-            <h5>0 subscribers</h5>
-            <h6> Subscribe to Unofficial Mechanical Youtube Channel, <br> where our memories are stored.<br><br> </h6> <a class="btn-subs" href="#">Subscribe</a> </p>
-        </div> <br> <br>
+
+        </div>
+<br>
         <hr width="95%"><br>
         <section>
             <h1>Unofficial Album</h1>
-            <h6>(Revealing 1st Nov)</h6>
+            <h6>(Coming Soon)</h6>
             <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="memories/g3.jpg"> </div>
             <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="memories/g5.jpg"> </div>
             <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="memories/g4.jpg"> </div>
         </section> <br>
-        <hr width="95%"><br>
-        <div class="custom-mech-card" onclick="">
-            <!-- <center>
-  (hidden)
-</center> -->
-            <div class="insta-container"> <img class="insta-promo-img" src="img/insta.jpg" align="left">
-                <p class="insta-promo-txt">
-                <h2>_sanjivani_group_of_institutes <i class="fa fa-check-circle"></i> </h2>
-                <h3>SANJIVANI COLLEGE OF ENGINEERING KOPARGAON</h3>
-                <h5>1,633 FOLLOWERS</h5>
-                <h6> Follow to our Unofficial instagram page to stay updated<br> with college fun.<br><br> </h6> <a class="btn-follow" href="https://instagram.com/_sanjivani_group_of_institutes?igshid=YmMyMTA2M2Y=">Open</a> <a class="btn-follow" href="https://instagram.com/_sanjivani_group_of_institutes?igshid=YmMyMTA2M2Y=">Follow</a> </p>
-            </div>
-        </div> <br>
         <hr width="95%">
         <div id="6koSC"></div> <br>
         <hr width="95%"><br>
