--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         height: 100%;
         z-index: 30;}
     .main-container{display: block;
-    margin-top: 0px;
+    margin-top: -50px;
     border: 0px #000 solid;}
     .hover:hover{
         padding: 16px;
@@ -257,6 +257,58 @@
       margin: 10px 0px;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+
+
+
+
+
+
+    .ind-cards-container{
+        margin: 0;
+        overflow: hidden;
+    }
+    .ind-card{
+        background-color: rgb(245, 245, 245);
+        margin: 30px 10px;
+        padding-bottom: 20px;
+        border: 0px rgba(0, 0, 0, 0.26) solid;
+        border-radius: 28px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.199);
+        overflow: hidden;
+    }
+    .ind-img{
+        width: 100%;
+        border-radius: 28px;
+    }
+    .channel-img{
+        width: 10%;
+        border-radius: 50%;
+        margin: 15px;
+        float: left;
+    }
+    .ind-details{
+        color: rgb(36, 36, 36);
+        background-color: rgba(255, 217, 0, 0);
+        width: 90%;
+        margin-top: 10px;
+        padding: 0px 10px;
+        border-bottom: 0px #000 solid;
+        border-radius: 0px;
+    }
+    .ind-title{
+        margin: 0;
+        padding: 5px 0;
+        font-size: 14px;
+        font-weight: 500;
+        border: 0px #000 solid;
+    }
+    .ind-other-detail{
+        margin: 0;
+        padding: 0px 0;
+        font-size: 10px;
+        font-weight: 400;
+        border: 0px #000 solid;
     }
     }
 </style>
